# tengen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-start-command.sh
.github/workflows/: release.yaml  test.yaml
src/tengen/: __init__.py  build.py
