[project]
name = "tengen"
dynamic = ["version"]
description = "Python engine for Go/Baduk/Weiqi."
readme = "README.md"
authors = [
    { name = "William Strausser", email = "william.e.strausser@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "commitizen>=3.30.0",
    "pathlib>=1.0.1",
]

[project.entry-points."commitizen.provider"]
tengen-provider = "tengen.build:Provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.hatch.version]
path = "src/.version"
pattern = "^(?P<version>\\d{1,3}\\.\\d{1,3}\\.\\d{1,3})$"

[tool.uv]
cache-keys = [{ file = "src/.version" }]
reinstall-package = ["tengen"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "tengen-provider"
update_changelog_on_bump = true
major_version_zero = true
